2008-05-02  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* php-mode.texi (Completion): Give example of making a
	php-completion-file from the PHP manual HTMl files.
	(Change Logs): Add index entries to this section.
	(Customization): Add notes as source code comments about what
	should be documented in this section.

2008-04-12  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* php-mode.texi: Insert various comments for maintaining the
	manual.  Make grammatical fixes throughout document.
	(Introduction): Add description of intended audience.
	(Editing): Document mark-defun, narrow-to-defun and widen.
	(Change Logs): Mention `C-x 4 a' can be run from PHP file or Diff
	mode buffer.
	(Contributors): Add Aaron Iba.

	* php-mode.el: Update modification date to today's date.
	(php-tags, php-tags-key): Move definition to above php-mode to
	avoid byte compiler warning.  Use eval-when-compile for
	regexp-opt.
	(php-font-lock-keywords-1): Use font-lock-preprocessor-face for
	PHP and ASP tags.
	(php-mode-modified): Use a string literal rather than a computed
	value.
	(php-font-lock-keywords-1, php-font-lock-keywords-2): Add [^_$] to
	beginning and [^_] to end of font-lock regular expressions to
	avoid false matches in user variable and function names.  Affects
	highlighting of self, parent, print, break, case, continue, other
	keywords and internal constants.

2008-04-09  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* php-mode.el (php-mode): Add commented-out c-lang-defvar
	statements below commented-out out c-lang-defconst.
	(php-mode-modified): Resolve setting constant by using
	format-time-string, but still using eval-when-compile.
	(php-mode): Turn on c-mode features with c-add-language, including
	c-symbol-key.
	(php-mode): Overwrite C-style macros rule to recognize PHP tags
	instead.
	(php-tags, php-tags-key): New constants.
	(php-font-lock-keywords-1): Use php-tags-key for syntax
	highlighting of PHP tags.
